<resources>
    <string name="app_name">Ojek Online</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="didn_t_have_account_make_an_account_or_sign_up">Didn\'t have account? Make an account or Sign Up</string>
    <string name="or">OR</string>
    <string name="sign_up_google">Sign Up with Google</string>
    <string name="name">Name</string>
    <string name="hp">No. Telp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="inputkan_nomor_hp">Inputkan Nomor Hp</string>
    <string name="submit">submit</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama:</string>
    <string name="namaku">Putya</string>
    <string name="email_putya">emailku</string>
    <string name="notelp">no telp</string>
    <string name="_081299770647">14022</string>
    <string name="sign_out">Sign Out</string>
    <string name="Batam">batam</string>
    <string name="dari_mana">Dari mana?</string>
    <string name="mau_kemana">Mau kemana?</string>
    <string name="harga">harga</string>
    <string name="price">Rp.50.000,00</string>
    <string name="estimasi_waktu">Estimasi Waktu</string>
    <string name="_3_menit">3 menit</string>
    <string name="pesan">Pesan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="nama_driver">Nama Driver</string>
    <string name="tunggu_driver_kamu_pick_up_ya">Tunggu driver kamu pick up ya!</string>
    <string name="request">request</string>
    <string name="handle">Handle</string>
    <string name="complete">Complete</string>
    <string name="take_booking">Take Booking</string>
</resources>