<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_140dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/email"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_below="@id/loginName"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="@dimen/_18sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_below="@id/loginPassword"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background_2"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:gravity="center"
        android:text="@string/didn_t_have_account_make_an_account_or_sign_up" />

    <TextView
        android:id="@+id/textOR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpLink"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_30dp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="@dimen/_20sp" />

    <Button
        android:id="@+id/signUpButtonGmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_below="@+id/textOR"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background_2"
        android:text="@string/sign_up_google"
        android:textColor="@color/white" />

</RelativeLayout>