<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30dp"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/name"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/email"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/signUpHp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/hp"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="@dimen/_18sp" />

    <EditText
        android:id="@+id/signUpConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/_18sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginRight="@dimen/_30dp"
        android:background="@drawable/background_2"
        android:text="@string/sign_up"
        android:textColor="@color/white" />
</LinearLayout>